<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="apps.brokenwallsstudios.autoluminosity.RegisterActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/register_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/register_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_register_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/action_register"
                android:textStyle="bold" android:textSize="24sp" />

            <EditText android:id="@+id/register_email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/register_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/register_password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/register_password"
                android:imeActionId="@+id/register"
                android:imeActionLabel="@string/action_register"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <EditText android:id="@+id/register_confirm_password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/register_confirm_password"
                android:imeActionId="@+id/register"
                android:imeActionLabel="@string/action_register"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <Button android:id="@+id/email_register_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_register"
                android:textStyle="bold" />

            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

