<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="apps.brokenwallsstudios.autoluminosity.LightDetailsActivity"
    tools:showIn="@layout/activity_light_details">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical">

        <TextView android:id="@+id/lightNameText" android:textSize="18sp" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:text="@string/add_schedule"
            android:id="@+id/addScheduleButton" />

        <Button
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:text="@string/toggle_light"
            android:id="@+id/toggleLightButton" />

        <Button android:id="@+id/unregisterLightButton"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/unregister_light"
            android:background="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </ScrollView>

</RelativeLayout>
