<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="apps.brokenwallsstudios.autoluminosity.RoomDetailsActivity"
    tools:showIn="@layout/activity_room_details">

    <ProgressBar android:id="@+id/main_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical">

        <TextView android:id="@+id/roomNameText" android:textSize="18sp" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView android:id="@id/android:list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        </ListView>

        <Button
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:text="@string/add_schedule"
            android:id="@+id/addScheduleButton" />

        <Button
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:text="@string/toggle_room"
            android:id="@+id/toggleRoomButton" />

        <Button android:id="@+id/unregisterRoomButton"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/unregister_room"
            android:background="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
